<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/toolBar"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="80sp"
        android:layout_marginLeft="100sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="20sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="90sp"/>

        <Spinner
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="40sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complexity"
            android:textSize="20sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="90sp"/>

        <Spinner
            android:id="@+id/diff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="40sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_marginTop="50sp"
        android:layout_marginLeft="90sp">
        <EditText
            android:id="@+id/countError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/countError"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="90sp">
        <EditText
            android:id="@+id/countPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/countPoint"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="25sp"/>
    </LinearLayout>

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/add"
        android:textSize="20sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="30sp"
        android:onClick="Add"/>

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/allStat"
        android:textSize="20sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="10sp"
        android:onClick="AllStat"/>

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="Назад"
        android:textSize="20sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="10sp"
        android:onClick="Back"/>

</LinearLayout>