<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/login"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="100sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <LinearLayout
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp">
            <EditText
                android:id="@+id/email"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:hint="@string/emailHint"
                android:textSize="14sp"
                android:padding="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <LinearLayout
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60sp">
            <EditText
                android:id="@+id/password"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:hint="@string/passHint"
                android:textSize="14sp"
                android:padding="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="30sp"
        android:onClick="Login"/>

</LinearLayout>